--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "morgan": "^1.10.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5"
+    "multer": "^1.4.5",
+    "form-data": "^4.0.0"
   }
 }
