--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mongodb": "^6.18.0"
+    "bcryptjs": "^3.0.2",
+    "form-data": "^4.0.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
+    "multer": "^2.0.2",
+    "node-fetch": "^2.7.0"
   }
 }
