--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 MONGO_URI=mongodb://localhost:27017/grants
 JWT_SECRET=your_jwt_secret
 ANALYZER_URL=http://localhost:8000/analyze
+AGENT_URL=http://localhost:5001/form-fill
