--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2"
   }
 }
