Fix eligibility endpoint and agent URL

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@
 MONGO_URI=mongodb://localhost:27017/grants
 JWT_SECRET=your_jwt_secret
 ANALYZER_URL=http://localhost:8000/analyze
-AGENT_URL=http://localhost:5001/form-fill
+# Base URL of the AI agent service
+AGENT_URL=http://localhost:5001
