Use ELIGIBILITY_ENGINE_URL for engine requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - JWT_SECRET=devsecret
       - ANALYZER_URL=http://ai-analyzer:8000/analyze
       - AGENT_URL=http://ai-agent:5001
-      - ENGINE_URL=http://eligibility-engine:4001/check
+      - ELIGIBILITY_ENGINE_URL=http://eligibility-engine:4001
     depends_on:
       - mongo
       - ai-analyzer
