chore: remove analyzer service

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Example environment configuration
 MONGO_URI=mongodb://localhost:27017/grants
 JWT_SECRET=your_jwt_secret
-ANALYZER_URL=http://localhost:8000/analyze
-# Base URL of the AI agent service
-AGENT_URL=http://localhost:5001
+AI_AGENT_URL=http://localhost:5001
+ELIGIBILITY_ENGINE_URL=http://localhost:4001
+FORM_FILLER_URL=http://localhost:5002
