--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "mongoose": "^8.16.4",
-    "morgan": "^1.10.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5",
-    "form-data": "^4.0.0"
+    "cors": "2.8.5",
+    "dotenv": "17.2.0",
+    "express": "5.1.0",
+    "mongoose": "8.16.4",
+    "morgan": "1.10.1",
+    "bcryptjs": "3.0.2",
+    "jsonwebtoken": "9.0.2",
+    "multer": "2.0.2",
+    "form-data": "4.0.4"
   }
 }
