--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,13 @@
     "test": "node --test"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "form-data": "^4.0.4",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "node-fetch": "^3.3.2"
+    "bcryptjs": "3.0.2",
+    "cors": "2.8.5",
+    "dotenv": "17.2.1",
+    "express": "5.1.0",
+    "form-data": "4.0.4",
+    "jsonwebtoken": "9.0.2",
+    "multer": "2.0.2",
+    "node-fetch": "3.3.2"
   }
 }
