--- a/ai-agent/requirements.txt
+++ b/ai-agent/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-pydantic
-uvicorn
-pytesseract
-pdfplumber
-python-dotenv
-openai
+fastapi==0.95.2
+pydantic==1.10.12
+uvicorn==0.22.0
+pytesseract==0.3.10
+pdfplumber==0.10.2
+python-dotenv==1.0.0
+openai==0.27.8
