--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -22,6 +24,11 @@
     "typescript": "^5.3.2",
     "@types/react": "^18.2.0",
     "@types/node": "^20.9.0",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "@types/jest": "^29.5.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@playwright/test": "^1.43.0",
+    "jest": "^29.7.0"
   }
 }
