--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+          cache-dependency-path: server/package-lock.json
       - run: npm ci
       - run: npm test
       - uses: actions/upload-artifact@v4
@@ -32,7 +34,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: ai-agent/requirements.txt
       - run: pip install -r requirements.txt
+      - run: flake8 .
       - run: coverage run -m pytest
       - run: coverage report --fail-under=70
       - run: coverage xml
@@ -51,7 +56,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: ai-analyzer/requirements.txt
       - run: pip install -r requirements.txt
+      - run: flake8 .
       - run: coverage run -m pytest
       - run: coverage report --fail-under=70
       - run: coverage xml
@@ -70,7 +78,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: eligibility-engine/requirements.txt
       - run: pip install -r requirements.txt
+      - run: flake8 .
       - run: coverage run -m pytest
       - run: coverage report --fail-under=70
       - run: coverage xml
@@ -89,7 +100,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - run: npm ci
+      - run: npm run lint
       - run: npm test
       - run: npx playwright install --with-deps
       - run: npm run e2e
@@ -97,4 +111,20 @@ jobs:
         with:
           name: frontend-coverage
           path: frontend/coverage
+
+  coverage:
+    runs-on: ubuntu-latest
+    needs:
+      - server
+      - ai-agent
+      - ai-analyzer
+      - eligibility-engine
+      - frontend
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: coverage
+      - uses: codecov/codecov-action@v3
+        with:
+          files: coverage/**/*
 
