--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,21 +14,21 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "^1.6.0",
-    "zustand": "^4.4.0"
+    "axios": "1.6.0",
+    "zustand": "4.4.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.14",
-    "typescript": "^5.3.2",
-    "@types/react": "^18.2.0",
-    "@types/node": "^20.9.0",
-    "eslint": "^8.56.0",
-    "@types/jest": "^29.5.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@playwright/test": "^1.43.0",
-    "jest": "^29.7.0"
+    "tailwindcss": "3.4.0",
+    "postcss": "8.4.24",
+    "autoprefixer": "10.4.14",
+    "typescript": "5.3.2",
+    "@types/react": "18.2.0",
+    "@types/node": "20.9.0",
+    "eslint": "8.56.0",
+    "@types/jest": "29.5.5",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/jest-dom": "6.1.3",
+    "@playwright/test": "1.43.0",
+    "jest": "29.7.0"
   }
 }
