--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,38 +4,32 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/validate-env.js && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "cross-env NEXT_PUBLIC_API_BASE=http://localhost:5000 jest",
-    "e2e": "playwright test",
-    "e2e:install": "playwright install"
+    "test": "jest",
+    "e2e": "playwright test"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "axios": "^1.6.0",
+    "next": "^14.2.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "1.6.0",
-    "zustand": "4.4.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "tailwindcss": "3.4.0",
-    "postcss": "8.4.24",
-    "autoprefixer": "10.4.14",
-    "typescript": "5.3.2",
-    "@types/react": "18.2.0",
-    "@types/node": "20.9.0",
-    "eslint": "8.56.0",
-    "@types/jest": "29.5.5",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/jest-dom": "6.1.3",
-    "@playwright/test": "1.43.0",
-    "jest": "29.7.0",
-    "cross-env": "7.0.3"
-  },
-  "jest": {
-    "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
-    "testPathIgnorePatterns": ["<rootDir>/e2e/"]
+    "@playwright/test": "^1.43.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.2"
   }
 }
