enforce mongodb auth and tls

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Example environment configuration
-MONGO_URI=mongodb://localhost:27017/grants
+MONGO_URI=mongodb://mongo:27017/grants?authSource=admin&tls=true
+MONGO_USER=serverUser
+MONGO_PASS=strongPassword
+MONGO_CA_FILE=/path/to/ca.pem
 JWT_SECRET=your_jwt_secret
 AI_AGENT_URL=http://localhost:5001
 ELIGIBILITY_ENGINE_URL=http://localhost:4001
