--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://mongo:27017/ai_agent?authSource=admin&tls=true
+MONGO_USER=agentUser
+MONGO_PASS=strongPassword
+MONGO_CA_FILE=/path/to/ca.pem
 OPENAI_API_KEY=your_openai_api_key
