--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "node --test --experimental-test-coverage > coverage.txt && node scripts/check-coverage.js coverage.txt"
+    "test": "node --test --experimental-test-coverage > coverage.txt && node scripts/check-coverage.js coverage.txt",
+    "verify:mongo": "node scripts/verify-mongo-tls.js"
   },
   "dependencies": {
     "bcryptjs": "3.0.2",
