feat: add centralized env validation

--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -1,5 +1,11 @@
-MONGO_URI=mongodb://mongo:27017/ai_agent?authSource=admin&tls=true
+# ENV VALIDATION: example env for ai-agent
+INTERNAL_API_KEY=internal_key
+OPENAI_API_KEY=openai_key
+MONGO_URI=mongodb://mongo:27017/grants?authSource=admin&tls=true
 MONGO_USER=agentUser
-MONGO_PASS=strongPassword
-MONGO_CA_FILE=/path/to/ca.pem
-OPENAI_API_KEY=your_openai_api_key
+MONGO_PASS=agentPassword
+MONGO_CA_FILE=./mongo-certs/ca.pem
+TLS_CERT_PATH=./tls/agent-cert.pem
+TLS_KEY_PATH=./tls/agent-key.pem
+TLS_CA_PATH=./tls/ca.pem
+ENABLE_DEBUG=false
