--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
     "build": "node scripts/validate-env.js && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "e2e": "playwright test"
+    "test": "cross-env NEXT_PUBLIC_API_BASE=http://localhost:5000 jest",
+    "e2e": "playwright test",
+    "e2e:install": "playwright install"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -29,6 +30,12 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/jest-dom": "6.1.3",
     "@playwright/test": "1.43.0",
-    "jest": "29.7.0"
+    "jest": "29.7.0",
+    "cross-env": "7.0.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "testPathIgnorePatterns": ["<rootDir>/e2e/"]
   }
 }
