--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
-{
-  "dependencies": {
-    "cors": "2.8.5",
-    "dotenv": "17.2.0",
-    "express": "4.18.2",
-    "mongoose": "8.16.4",
-    "morgan": "1.10.1",
-    "bcryptjs": "3.0.2",
-    "jsonwebtoken": "9.0.2",
-    "multer": "2.0.2",
-    "form-data": "4.0.4"
+  {
+    "scripts": {
+      "k6:smoke": "k6 run load/k6/smoke.js",
+      "k6:baseline": "k6 run load/k6/baseline.js",
+      "k6:stress": "k6 run load/k6/stress.js",
+      "k6:spike": "k6 run load/k6/spike.js"
+    },
+    "dependencies": {
+      "cors": "2.8.5",
+      "dotenv": "17.2.0",
+      "express": "4.18.2",
+      "mongoose": "8.16.4",
+      "morgan": "1.10.1",
+      "bcryptjs": "3.0.2",
+      "jsonwebtoken": "9.0.2",
+      "multer": "2.0.2",
+      "form-data": "4.0.4"
+    }
   }
-}
