chore: remove root env example

--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -1,11 +1,4 @@
-# ENV VALIDATION: example env for ai-agent
-INTERNAL_API_KEY=internal_key
-OPENAI_API_KEY=openai_key
-MONGO_URI=mongodb://mongo:27017/grants?authSource=admin&tls=true
-MONGO_USER=agentUser
-MONGO_PASS=agentPassword
-MONGO_CA_FILE=./mongo-certs/ca.pem
-TLS_CERT_PATH=./tls/agent-cert.pem
-TLS_KEY_PATH=./tls/agent-key.pem
-TLS_CA_PATH=./tls/ca.pem
-ENABLE_DEBUG=false
+# Vault configuration for ai-agent
+VAULT_ADDR=http://127.0.0.1:8200
+VAULT_SECRET_PATH=kv/data/grant-platform/ai-agent
+# VAULT_TOKEN should be provided externally
