--- a/ai-analyzer/.env.example
+++ b/ai-analyzer/.env.example
@@ -1,5 +1,4 @@
-# ENV VALIDATION: example env for ai-analyzer
-INTERNAL_API_KEY=internal_key
-TLS_CERT_PATH=./tls/analyzer-cert.pem
-TLS_KEY_PATH=./tls/analyzer-key.pem
-TLS_CA_PATH=./tls/ca.pem
+# Vault configuration for ai-analyzer
+VAULT_ADDR=http://127.0.0.1:8200
+VAULT_SECRET_PATH=kv/data/grant-platform/ai-analyzer
+# VAULT_TOKEN should be supplied securely
