--- a/eligibility-engine/.env.example
+++ b/eligibility-engine/.env.example
@@ -1,5 +1,4 @@
-# ENV VALIDATION: example env for eligibility-engine
-INTERNAL_API_KEY=internal_key
-TLS_CERT_PATH=./tls/engine-cert.pem
-TLS_KEY_PATH=./tls/engine-key.pem
-TLS_CA_PATH=./tls/ca.pem
+# Vault configuration for eligibility-engine
+VAULT_ADDR=http://127.0.0.1:8200
+VAULT_SECRET_PATH=kv/data/grant-platform/eligibility-engine
+# VAULT_TOKEN should be provided externally
