--- a/server/.env.example
+++ b/server/.env.example
@@ -1,21 +1,5 @@
-# ENV VALIDATION: example environment configuration for server
-JWT_SECRET=your_jwt_secret
-INTERNAL_API_KEY=internal_key
-OPENAI_API_KEY=openai_key
-FRONTEND_URL=https://localhost:3000
-ELIGIBILITY_ENGINE_URL=http://localhost:4001
-AI_ANALYZER_URL=http://localhost:4002
-AI_AGENT_URL=http://localhost:5001
-MONGO_URI=mongodb://mongo:27017/grants?authSource=admin&tls=true
-MONGO_USER=serverUser
-MONGO_PASS=strongPassword
-MONGO_CA_FILE=./mongo-certs/ca.pem
-TLS_KEY_PATH=./tls/server-key.pem
-TLS_CERT_PATH=./tls/server-cert.pem
-TLS_CA_PATH=./tls/ca.pem
-CLIENT_CERT_PATH=./tls/client-cert.pem
-CLIENT_KEY_PATH=./tls/client-key.pem
-CLIENT_CA_PATH=./tls/client-ca.pem
-PORT=5000
-ENABLE_DEBUG=false
-SKIP_DB=false
+# Example Vault configuration for server
+# All secrets are stored in Vault at VAULT_SECRET_PATH
+VAULT_ADDR=http://127.0.0.1:8200
+VAULT_SECRET_PATH=kv/data/grant-platform/server
+# VAULT_TOKEN should be supplied via deployment secrets and not committed
