--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     ports:
       - '27017:27017'
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=mongoAdmin
-      - MONGO_INITDB_ROOT_PASSWORD=changeMe
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     command: ["mongod", "--auth", "--tlsMode", "requireTLS", "--tlsCertificateKeyFile", "/etc/mongo/certs/mongo.pem", "--tlsCAFile", "/etc/mongo/certs/ca.pem"]
     volumes:
       - ./mongo-certs:/etc/mongo/certs:ro
@@ -17,14 +17,14 @@ services:
     ports:
       - '5000:5000'
     environment:
-      - MONGO_URI=mongodb://mongo:27017/grants?authSource=admin&tls=true
-      - MONGO_USER=serverUser
-      - MONGO_PASS=serverPass
+      - MONGO_URI=${MONGO_URI}
+      - MONGO_USER=${MONGO_USER}
+      - MONGO_PASS=${MONGO_PASS}
       - MONGO_CA_FILE=/etc/mongo/ca.pem
-      - JWT_SECRET=devsecret
-      - AI_ANALYZER_URL=https://ai-analyzer:8000
-      - ELIGIBILITY_ENGINE_URL=https://eligibility-engine:4001
-      - AI_AGENT_URL=https://ai-agent:5001
+      - JWT_SECRET=${JWT_SECRET}
+      - AI_ANALYZER_URL=${AI_ANALYZER_URL}
+      - ELIGIBILITY_ENGINE_URL=${ELIGIBILITY_ENGINE_URL}
+      - AI_AGENT_URL=${AI_AGENT_URL}
     depends_on:
       - mongo
       - ai-agent
@@ -46,9 +46,9 @@ services:
     depends_on:
       - eligibility-engine
     environment:
-      - MONGO_URI=mongodb://mongo:27017/ai_agent?authSource=admin&tls=true
-      - MONGO_USER=agentUser
-      - MONGO_PASS=agentPass
+      - MONGO_URI=${AI_AGENT_MONGO_URI}
+      - MONGO_USER=${AI_AGENT_MONGO_USER}
+      - MONGO_PASS=${AI_AGENT_MONGO_PASS}
       - MONGO_CA_FILE=/etc/mongo/ca.pem
     volumes:
       - ./mongo-certs/ca.pem:/etc/mongo/ca.pem:ro
