--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,7 @@
 VAULT_ADDR=http://127.0.0.1:8200
 VAULT_SECRET_PATH=kv/data/grant-platform/server
 # VAULT_TOKEN should be supplied via deployment secrets and not committed
+
+# Local development MongoDB connection
+# Includes user/pass directly in the URI; no separate credentials or CA file required
+MONGO_URI=mongodb://localhost:27017/dev-db
