chore: add dummy TLS files for dev

--- a/eligibility-engine/.env.example
+++ b/eligibility-engine/.env.example
@@ -2,3 +2,7 @@
 VAULT_ADDR=http://127.0.0.1:8200
 VAULT_SECRET_PATH=kv/data/grant-platform/eligibility-engine
 # VAULT_TOKEN should be provided externally
+
+# Dummy TLS certificates for local development
+TLS_CERT_PATH=dummy-cert.pem
+TLS_KEY_PATH=dummy-key.pem
