feat: add inter-service API key auth

--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -1,17 +1,6 @@
-# Vault configuration for ai-agent
-VAULT_ADDR=http://127.0.0.1:8200
-VAULT_SECRET_PATH=kv/data/grant-platform/ai-agent
-# VAULT_TOKEN should be provided externally
-
-# Local development defaults
-AI_AGENT_API_KEY=dummy
-AI_AGENT_NEXT_API_KEY=
-OPENAI_API_KEY=dummy
-MONGO_URI=mongodb://localhost:27017
-MONGO_USER=dummy
-MONGO_PASS=dummy
-MONGO_CA_FILE=dummy
-MONGO_AUTH_DB=admin
-TLS_CERT_PATH=dummy-cert
-TLS_KEY_PATH=dummy-key
-TLS_CA_PATH=
+# Security
+SECURITY_ENFORCEMENT_LEVEL=dev
+DISABLE_VAULT=true
+AGENT_API_KEY=dev-agent-key
+ELIGIBILITY_ENGINE_API_KEY=dev-engine-key
+AI_ANALYZER_API_KEY=dev-analyzer-key
