--- a/eligibility-engine/.env.example
+++ b/eligibility-engine/.env.example
@@ -1,8 +1,6 @@
-# Vault configuration for eligibility-engine
-VAULT_ADDR=http://127.0.0.1:8200
-VAULT_SECRET_PATH=kv/data/grant-platform/eligibility-engine
-# VAULT_TOKEN should be provided externally
-
-# Dummy TLS certificates for local development
-TLS_CERT_PATH=dummy-cert.pem
-TLS_KEY_PATH=dummy-key.pem
+# Security
+SECURITY_ENFORCEMENT_LEVEL=dev
+DISABLE_VAULT=true
+AGENT_API_KEY=dev-agent-key
+ELIGIBILITY_ENGINE_API_KEY=dev-engine-key
+AI_ANALYZER_API_KEY=dev-analyzer-key
