--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,6 @@
-# Example Vault configuration for server
-# All secrets are stored in Vault at VAULT_SECRET_PATH
-VAULT_ADDR=http://127.0.0.1:8200
-VAULT_SECRET_PATH=kv/data/grant-platform/server
-# VAULT_TOKEN should be supplied via deployment secrets and not committed
-
-# Local development MongoDB connection
-# Includes user/pass directly in the URI; no separate credentials or CA file required
-MONGO_URI=mongodb://localhost:27017/dev-db
+# Security
+SECURITY_ENFORCEMENT_LEVEL=dev
+DISABLE_VAULT=true
+AGENT_API_KEY=dev-agent-key
+ELIGIBILITY_ENGINE_API_KEY=dev-engine-key
+AI_ANALYZER_API_KEY=dev-analyzer-key
