--- a/ai-analyzer/.env.example
+++ b/ai-analyzer/.env.example
@@ -1,4 +1,6 @@
-# Vault configuration for ai-analyzer
-VAULT_ADDR=http://127.0.0.1:8200
-VAULT_SECRET_PATH=kv/data/grant-platform/ai-analyzer
-# VAULT_TOKEN should be supplied securely
+# Security
+SECURITY_ENFORCEMENT_LEVEL=dev
+DISABLE_VAULT=true
+AGENT_API_KEY=dev-agent-key
+ELIGIBILITY_ENGINE_API_KEY=dev-engine-key
+AI_ANALYZER_API_KEY=dev-analyzer-key
