--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 services:
+  redis:
+    image: redis:7
+    ports:
+      - '6379:6379'
   mongo:
     image: mongo:6
     restart: always
@@ -28,6 +32,13 @@ services:
       - AGENT_API_KEY=${AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
+      - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
+      - RATE_LIMIT_PER_MINUTE=${RATE_LIMIT_PER_MINUTE}
+      - RATE_LIMIT_WINDOW_SEC=${RATE_LIMIT_WINDOW_SEC}
+      - RATE_LIMIT_BURST=${RATE_LIMIT_BURST}
+      - REDIS_URL=${REDIS_URL}
+      - RATE_LIMIT_WHITELIST=${RATE_LIMIT_WHITELIST}
+      - TRUST_PROXY=${TRUST_PROXY}
     depends_on:
       - mongo
       - ai-agent
@@ -43,6 +54,12 @@ services:
       - AGENT_API_KEY=${AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
+      - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
+      - RATE_LIMIT_PER_MINUTE=${RATE_LIMIT_PER_MINUTE}
+      - RATE_LIMIT_WINDOW_SEC=${RATE_LIMIT_WINDOW_SEC}
+      - RATE_LIMIT_BURST=${RATE_LIMIT_BURST}
+      - REDIS_URL=${REDIS_URL}
+      - RATE_LIMIT_WHITELIST=${RATE_LIMIT_WHITELIST}
 
   ai-agent:
     build:
@@ -60,6 +77,12 @@ services:
       - AGENT_API_KEY=${AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
+      - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
+      - RATE_LIMIT_PER_MINUTE=${RATE_LIMIT_PER_MINUTE}
+      - RATE_LIMIT_WINDOW_SEC=${RATE_LIMIT_WINDOW_SEC}
+      - RATE_LIMIT_BURST=${RATE_LIMIT_BURST}
+      - REDIS_URL=${REDIS_URL}
+      - RATE_LIMIT_WHITELIST=${RATE_LIMIT_WHITELIST}
     volumes:
       - ./mongo-certs/ca.pem:/etc/mongo/ca.pem:ro
 
@@ -71,6 +94,12 @@ services:
       - AGENT_API_KEY=${AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
+      - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
+      - RATE_LIMIT_PER_MINUTE=${RATE_LIMIT_PER_MINUTE}
+      - RATE_LIMIT_WINDOW_SEC=${RATE_LIMIT_WINDOW_SEC}
+      - RATE_LIMIT_BURST=${RATE_LIMIT_BURST}
+      - REDIS_URL=${REDIS_URL}
+      - RATE_LIMIT_WHITELIST=${RATE_LIMIT_WHITELIST}
 
   frontend:
     build: ./frontend
