--- a/ai-analyzer/.env.example
+++ b/ai-analyzer/.env.example
@@ -4,3 +4,11 @@ DISABLE_VAULT=true
 AGENT_API_KEY=dev-agent-key
 ELIGIBILITY_ENGINE_API_KEY=dev-engine-key
 AI_ANALYZER_API_KEY=dev-analyzer-key
+
+# Rate limiting
+ENABLE_RATE_LIMIT=true
+RATE_LIMIT_PER_MINUTE=100
+RATE_LIMIT_WINDOW_SEC=60
+RATE_LIMIT_BURST=0
+REDIS_URL=redis://redis:6379/0
+RATE_LIMIT_WHITELIST=
