--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "3.0.2",
     "cors": "2.8.5",
     "express": "^4.21.2",
+    "express-rate-limit": "6.11.0",
     "form-data": "4.0.4",
     "jsonwebtoken": "9.0.2",
     "multer": "2.0.2",
