--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - AI_ANALYZER_URL=${AI_ANALYZER_URL}
       - ELIGIBILITY_ENGINE_URL=${ELIGIBILITY_ENGINE_URL}
       - AI_AGENT_URL=${AI_AGENT_URL}
-      - AGENT_API_KEY=${AGENT_API_KEY}
+      - AI_AGENT_API_KEY=${AI_AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
       - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
@@ -51,7 +51,7 @@ services:
     ports:
       - '4001:4001'
     environment:
-      - AGENT_API_KEY=${AGENT_API_KEY}
+      - AI_AGENT_API_KEY=${AI_AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
       - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
@@ -74,7 +74,7 @@ services:
       - MONGO_USER=${AI_AGENT_MONGO_USER}
       - MONGO_PASS=${AI_AGENT_MONGO_PASS}
       - MONGO_CA_FILE=/etc/mongo/ca.pem
-      - AGENT_API_KEY=${AGENT_API_KEY}
+      - AI_AGENT_API_KEY=${AI_AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
       - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
@@ -91,7 +91,7 @@ services:
     ports:
       - '8000:8000'
     environment:
-      - AGENT_API_KEY=${AGENT_API_KEY}
+      - AI_AGENT_API_KEY=${AI_AGENT_API_KEY}
       - ELIGIBILITY_ENGINE_API_KEY=${ELIGIBILITY_ENGINE_API_KEY}
       - AI_ANALYZER_API_KEY=${AI_ANALYZER_API_KEY}
       - ENABLE_RATE_LIMIT=${ENABLE_RATE_LIMIT}
