chore: remove security middleware for local dev

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,15 +1,6 @@
-# Security
-SECURITY_ENFORCEMENT_LEVEL=dev
-DISABLE_VAULT=true
-AI_AGENT_API_KEY=dev-agent-key
-ELIGIBILITY_ENGINE_API_KEY=dev-engine-key
-AI_ANALYZER_API_KEY=dev-analyzer-key
-
-# Rate limiting
-ENABLE_RATE_LIMIT=true
-RATE_LIMIT_PER_MINUTE=100
-RATE_LIMIT_WINDOW_SEC=60
-RATE_LIMIT_BURST=0
-REDIS_URL=redis://redis:6379/0
-RATE_LIMIT_WHITELIST=
-TRUST_PROXY=true
+PORT=5000
+FRONTEND_URL=http://localhost:3000
+ELIGIBILITY_ENGINE_URL=http://eligibility-engine:4001
+AI_ANALYZER_URL=http://ai-analyzer:8000
+AI_AGENT_URL=http://ai-agent:5001
+MONGO_URI=mongodb://mongo:27017/grants
