--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -1,14 +1,1 @@
-# Security
-SECURITY_ENFORCEMENT_LEVEL=dev
-DISABLE_VAULT=true
-AI_AGENT_API_KEY=dev-agent-key
-ELIGIBILITY_ENGINE_API_KEY=dev-engine-key
-AI_ANALYZER_API_KEY=dev-analyzer-key
-
-# Rate limiting
-ENABLE_RATE_LIMIT=true
-RATE_LIMIT_PER_MINUTE=100
-RATE_LIMIT_WINDOW_SEC=60
-RATE_LIMIT_BURST=0
-REDIS_URL=redis://redis:6379/0
-RATE_LIMIT_WHITELIST=
+# Example environment for ai-agent (no security configuration required)
