--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@opentelemetry/sdk-node": "0.50.0",
     "bcryptjs": "3.0.2",
     "cors": "2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "express-rate-limit": "6.11.0",
     "form-data": "4.0.4",
