--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,14 +24,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/components/*": [
-        "src/components/*"
-      ],
-      "@/lib/*": [
-        "src/lib/*"
-      ],
-      "@/hooks/*": [
-        "src/hooks/*"
+      "@/*": [
+        "src/*"
       ]
     },
     "plugins": [
@@ -42,8 +36,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx",
+    "src/**/*",
     ".next/types/**/*.ts"
   ],
   "exclude": [
