--- a/ai-analyzer/requirements.txt
+++ b/ai-analyzer/requirements.txt
@@ -1,11 +1,27 @@
-pytesseract==0.3.10
-pillow==9.5.0
+# Core
 fastapi==0.115.6
+starlette==0.41.3
 uvicorn==0.22.0
-pytest==8.0.2
-coverage==7.4.0
-flake8==6.1.0
+
+# OCR & PDF
+pytesseract==0.3.10
+Pillow==9.5.0
+pdfplumber==0.11.0
+pdfminer.six==20231228
+pypdfium2==4.30.0
+
+# Config & utils
 pydantic==2.9.2
 pydantic-settings==2.3.4
 PyYAML==6.0.2
-pdfplumber==0.11.0
+packaging==25.0
+
+# Testing
+pytest==8.0.2
+coverage==7.4.0
+httpx==0.28.1
+python-multipart==0.0.20
+flake8==6.1.0
+
+# Metrics
+prometheus-client==0.21.1
