test: cover OpenAI analyzer endpoint

--- a/ai-analyzer/.env
+++ b/ai-analyzer/.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 AI_ANALYZER_API_KEY=dev-analyzer-key
 TLS_CERT_PATH=dummy-cert
 TLS_KEY_PATH=dummy-key
+USE_AI_ANALYZER=false
+OPENAI_API_KEY=
