--- a/ai-analyzer/.env.example
+++ b/ai-analyzer/.env.example
@@ -1,1 +1,6 @@
 # Example environment for ai-analyzer (no security configuration required)
+NODE_ENV=development
+# set to "true" to enable the OpenAI-powered endpoint
+USE_AI_ANALYZER=false
+# your OpenAI API key when USE_AI_ANALYZER=true
+OPENAI_API_KEY=
