--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,8 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "nock": "13.5.2",
-    "supertest": "6.3.4"
+    "supertest": "^6.3.4"
   }
 }
