--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,8 @@
 PORT=5000
 FRONTEND_URL=http://localhost:3000
 ELIGIBILITY_ENGINE_URL=http://eligibility-engine:4001
-AI_ANALYZER_URL=http://ai-analyzer:8000
+# AI Analyzer base URL (FastAPI)
+AI_ANALYZER_URL=http://localhost:8002
+# NOTE: Port 8002 is the default. Update only if you run the analyzer on a different port.
 AI_AGENT_URL=http://ai-agent:5001
 MONGO_URI=mongodb://mongo:27017/grants
