--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "on-finished": "2.4.1",
     "pino": "8.16.0",
     "prom-client": "15.0.0",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "pdf-lib": "1.17.1"
   },
   "devDependencies": {
     "jest": "29.7.0",
