--- a/server/package.json
+++ b/server/package.json
@@ -27,5 +27,9 @@
     "jest": "^29.7.0",
     "nock": "13.5.2",
     "supertest": "^6.3.4"
+  },
+  "jest": {
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "testEnvironment": "node"
   }
 }
