--- a/server/package.json
+++ b/server/package.json
@@ -18,14 +18,16 @@
     "multer": "2.0.2",
     "node-fetch": "3.3.2",
     "on-finished": "2.4.1",
+    "pdf-lib": "^1.17.1",
     "pino": "8.16.0",
     "prom-client": "15.0.0",
-    "uuid": "9.0.1",
-    "pdf-lib": "1.17.1"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "jest": "^29.7.0",
     "nock": "13.5.2",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.4.1"
   }
 }
