--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "js-yaml": "^4.1.0",
     "form-data": "4.0.4",
     "multer": "2.0.2",
     "node-fetch": "3.3.2",
